Source/WebKit/UIProcess/Launcher/ProcessLauncher.h
@@ -65,6 +65,7 @@ public:
         WebCore::ProcessIdentifier processIdentifier;
         HashMap<String, String> extraInitializationData;
         bool nonValidInjectedCodeAllowed { false };
+        bool shouldMakeProcessLaunchFailForTesting { false };
 
 #if ENABLE(DEVELOPER_MODE) && (PLATFORM(GTK) || PLATFORM(WPE))
         String processCmdPrefix;
